tests/frontend/fail/cycle2.act
contract B

contract A

//  Call graph:
//
//      C
//     / \
//    A   B
//         \
//          D
//           \
//            C

constructor
interface constructor()

creates
   uint x := 0

constructor
interface constructor(uint x)

creates
   uint y := x
   D d := create D()

transition remote
interface set_remote(uint z)

iff
   CALLVALUE == 0

storage
   d.x := z


contract C

constructor
interface constructor(uint u)

creates
   B b := create B(u)
   A a := create A()


contract D

constructor
interface constructor()

creates
   C c := create C(0)
   uint x := 0
